--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -1,4 +1,4 @@
-name: CodeQL
+name: CI - RELEASE
 
 on:
   push:
@@ -28,6 +28,7 @@ jobs:
 
       - name: Compile
         run: |
+          npm install
           npm run build
 
       - name: Add & Commit
