--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -5,7 +5,7 @@ on:
     branches: [ master ]
 
 jobs:
-  codeql:
+  release:
     runs-on: ubuntu-latest
 
     steps:
@@ -25,17 +25,6 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           release_branches: master
           dry_run: true
-
-      - name: Compile
-        run: |
-          npm install
-          npm run build
-
-      - name: Add & Commit
-        uses: EndBug/add-and-commit@v7.0.0
-        with:
-          message: "RELEASE-uploading Npm dist for ${{steps.tag_version.outputs.new_version}}"
-
 
       - name: "Create release"
         id: create_release
